--- a/index.html
+++ b/index.html
@@ -1,81 +1,168 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>5 Elementos: Medicina Holística y Transpersonal</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@100;400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>5 Elementos: Medicina Holística y Transpersonal</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@100;400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">5 Elementos</div>
-      <ul class="nav-links">
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#agendar">Agendar Hora</a></li>
-        <li><a href="#servicios">Servicios</a></li>
-        <li><a href="#testimonios">Testimonios</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a>
+                    <img src="logo-5-elem-cuadrado-sin-letr.png"> 
+                </a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#agendar">Agendar Hora</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#testimonios">Testimonios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section id="inicio">
-      <h1>Bienvenidos a 5 Elementos</h1>
-      <img src="ruta-de-imagen.jpg" alt="Imagen principal">
-      <p>Descripción breve del espacio y sus servicios.</p>
-      <ul>
-        <li>Servicio 1</li>
-        <li>Servicio 2</li>
-        <li>Servicio 3</li>
-      </ul>
-      <a href="https://wa.me/numerodetelefono" class="whatsapp-button">Contactar por WhatsApp</a>
-    </section>
+    <main>
+        <section id="inicio">
+            <h1>Bienvenidos a 5 Elementos</h1>
+            <img src="logo-5-elem-horizontal.jpg" alt="Imagen principal">
+            <p>
+                5 Elementos: Medicina Holística y Transpersonal"
+                es un espacio de sanación creado por Fabiola Zavalla
+                Guerrero, profesional del área de la salud, Terapeuta
+                Energética y Transpersonal, ubicado en el corazón de
+                Santiago de Chile, con una clara misión: fomentar la
+                salud integral, el bienestar, el crecimiento personal
+                y la expansión de la consciencia.
+            </p>
+            <ul>
+                <li>Terapia Regresiva</li>
+                <li>Constelaciones Familiares</li>
+                <li>Biomagnetismo</li>
+            </ul>
+            <a href="https://wa.me/+56987636208" class="whatsapp-button">Contactar por WhatsApp</a>
+        </section>
 
-    <section id="terapeuta">
-      <div class="terapeuta-info">
-        <img src="ruta-de-imagen-terapeuta.jpg" alt="Terapeuta">
-        <p>Descripción sobre la terapeuta y su experiencia.</p>
-      </div>
-    </section>
+        <section id="terapeuta">
+            <div class="terapeuta-info">
+                <img src="fabiola_perfil.jpg" alt="Terapeuta">
+                <p>
+                    ¿Quién soy? Mi nombre es Fabiola: 
+                    Comencé́ a recorrer este camino desde 
+                    el año 2009, paralelamente a mis 
+                    estudio universitarios como 
+                    profesional del área de la salud, 
+                    inicialmente en la búsqueda de una 
+                    ayuda "alternativa" para la enfermedad
+                     de mi madre. Con el correr de los 
+                     años, me di cuenta que esa ayuda 
+                     también yo la necesitaba... y mucho. 
+                     Desde ahí, he comenzado un viaje 
+                     interior de sanación y aprendizajes 
+                     con distintas técnicas energéticas y 
+                     transpersonales. Viaje, que no ha 
+                     parado hasta hoy. En donde me he 
+                     enfrentado a mis heridas, traumas y 
+                     a mis sombras. Y si bien no ha sido 
+                     un camino fácil, sin duda alguna, lo 
+                     volvería a recorrer. Porque gracias 
+                     a ello, he podido acompañar en estos 
+                     14 años, a muchos seres en su 
+                     búsqueda interior; Ya sea para una 
+                     rica sesión de energía y masaje, 
+                     hasta procesos en donde están 
+                     preparándose para dar el paso a lo 
+                     que llamamos “muerte”. Es por eso 
+                     que hoy puedo acompañarte desde 5 
+                     Elementos. Este hermoso espacio de 
+                     sanación que he creado con todo mi 
+                     amor, poniendo en práctica toda mi 
+                     experiencia en este camino del 
+                     despertar de tu consciencia. Para 
+                     que puedas sentirte capaz de 
+                     liberarte de todas esas heridas, 
+                     miedos y programaciones que impiden 
+                     que des el paso y veas tu verdadero 
+                     potencial, tu verdadera esencia y 
+                     así puedas alcanzar la vida que 
+                     siempre soñaste para ti, como yo lo 
+                     he hecho con la mía. Y Tú, ¿Te 
+                     animas a descubrir tu verdadero ser?
+                </p>
+            </div>
+        </section>
 
-    <section id="servicios">
-      <h2>Servicios</h2>
-      <div class="servicios-grid">
-        <!-- Tarjetas de servicios -->
-        <div class="servicio-card">Servicio 1</div>
-        <div class="servicio-card">Servicio 2</div>
-        <div class="servicio-card">Servicio 3</div>
-        <div class="servicio-card">Servicio 4</div>
-        <div class="servicio-card">Servicio 5</div>
-        <div class="servicio-card largo">Servicio 6</div>
-      </div>
-    </section>
+        <section id="servicios">
+            <h2>Servicios</h2>
+            <div class="servicios-grid">
+                <!-- Tarjetas de servicios -->
+                <div class="servicio-card">Terapia Regresiva</div>
+                <div class="servicio-card">Terapia Constelaciones Familiares</div>
+                <div class="servicio-card">Terapia Biomagnetismo</div>
+                <div class="servicio-card">Terapia Sanación de Patrones</div>
+                <div class="servicio-card">Terapia Floral</div>
+                <div class="servicio-card">Terapia Sanación Cuántica</div>
+                <div class="servicio-card">Terapia Energización</div>
+                <div class="servicio-card">Terapia Energética Integral</div>
+                <div class="servicio-card largo">Terapia Sanación Cuántica</div>
+            </div>
+        </section>
 
-    <section id="testimonios">
-      <h2>Testimonios</h2>
-      <div class="testimonios-grid">
-        <div class="testimonio">Testimonio 1</div>
-        <div class="testimonio">Testimonio 2</div>
-        <div class="testimonio">Testimonio 3</div>
-        <div class="testimonio">Testimonio 4</div>
-      </div>
-    </section>
-  </main>
+        <section id="testimonios">
+            <h2>Testimonios</h2>
+            <div class="testimonios-grid">
+                <div class="testimonio">
+                    "Me he realizados ya dos sesiones de Terapia Regresiva con Fabiola, y la verdad es que en ambas fueron experiencias maravillosas. 
+                    Si bien ambas sesiones fueron bien intensas emocionalmente, me sentí absolutamente sostenida durante la sesión y Fabiola me fue guiando 
+                    de una forma amorosa y muy delicada para que pudiera entender de dónde venía mi falta de confianza e inseguridades. 
+                    Sin dudas, la recomiendo totalmente".
+                </div>
+                <div class="testimonio">
+                    "Llegué a Fabiola por recomendación de una amiga ya que desde hace mucho sufro de insomnio y cuadros de Ansiedad. 
+                    Hicimos terapia de energización integral, y me sentí muy relajado durante la sesión e incluso días después de ésta. 
+                    Con el paso de los días, si bien esa relajación rica que experimenté durante la terapia a ido disminuyendo, 
+                    me he sentido con más energía y he notado que en las horas que estoy durmiendo, mi sueño ha sido mucho más profundo. 
+                    Estoy pensando en volver luego de que se me acaben las gotitas de Bach".
+                </div>
+                <div class="testimonio">
+                    "Fabiola llegó en un momento de mi vida en donde sentía que estaba perdiendo el rumbo. 
+                    Me la recomendó una amiga de mi hermano y fui sin muchas expectativas. 
+                    La primera vez trabajamos con Energización y fue una experiencia que nunca había sentido antes. 
+                    Luego de eso, hemos trabajado con terapia floral y con una Constelación, la que me ayudó a entender cosas que sentía y no encontraba su causa. 
+                    Lo que trabajé en esa época con Fabiola me dio el impulso para poder hacerme cargo de lo que tenía que sanar y actualmente me encuentro 
+                    también con terapia psicológica la que me ha ayudado a sacar cosas que estaban guardadas dentro mí y que sino las hubiera trabajado antes, 
+                    no me hubiese atrevido hacerlo".
+                </div>
+                <div class="testimonio">
+                    "Cuando mi hijo tenía 4 años, hacía sonar mucho los dientes cuando dormía...buscando ayuda para él llegué 
+                    con Fabiola y la terapia de gotitas....lo cual le sirvió muchísimo...luego partí yo...de eso ya han pasado 9 años...y definitivamente 
+                    más que una terapia, ha sido un acompañamiento en este proceso llamado vida.. si la recomendaría??? La respuesta es clara: una y mil veces!!! 
+                    En ella he confiado a mi hijo, a mis hermanas, a mi mamá y a mi misma...no es solo relajación o meditación, es una guía para poder conocerse, 
+                    gestionar emociones e incluso entrega herramientas para la vida. Con ella he podido cerrar etapas, tomar decisiones y ver que la vida es mucho más 
+                    llevadera, bella y simple de lo que uno muchas veces piensa y se encierra. Para mi no es una terapia.. es un regalo que me doy".
+                </div>
+            </div>
+        </section>
+    </main>
 
-  <footer>
-    <div class="footer-left">
-      <div class="logo">5 Elementos</div>
-      <p>Teléfono: +56912345678</p>
-      <p>Email: contacto@5elementos.com</p>
-      <div class="socials">Redes sociales</div>
-    </div>
-    <div class="footer-right">
-      <p>Dirección: Calle Ejemplo 123, Ciudad</p>
-      <iframe src="URL-DE-MAPA" width="300" height="200" style="border:0;" allowfullscreen=""></iframe>
-    </div>
-  </footer>
+    <footer>
+        <div class="footer-left">
+            <div class="logo">5 Elementos</div>
+            <p>Teléfono: +56987636208</p>
+            <p>Email: 5.elementos.medicinaholistica@gmail.com</p>
+            <div class="socials">Redes sociales</div>
+        </div>
+        <div class="footer-right">
+            <p>Dirección: Huérfanos 886 oficina 603, Santiago Centro</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.3728643564164!2d-70.65168482358494!3d-33.439590973393955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5a3d0192a2f%3A0xcd18cf422d1f24a5!2sHu%C3%A9rfanos%20886%2C%20oficina%20603%2C%208320202%20Santiago%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1733632499890!5m2!1ses!2scl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </footer>
 </body>
+
 </html>
