Commit 2 - Modificación de estilos erroneos e imagenes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a>
-                    <img src="logo-5-elem-cuadrado-sin-letr.png"> 
-                </a>
+                <a href="#"> <img src="logo-5-elem-cuadrado-sin-letr.png"  style="width: 100px;"> </a>
             </div>
             <ul class="nav-links">
                 <li><a href="#inicio">Inicio</a></li>
@@ -31,7 +29,7 @@
     <main>
         <section id="inicio">
             <h1>Bienvenidos a 5 Elementos</h1>
-            <img src="logo-5-elem-horizontal.jpg" alt="Imagen principal">
+            <img src="logo-5-elem-horizontal.png" alt="Imagen principal">
             <p>
                 5 Elementos: Medicina Holística y Transpersonal"
                 es un espacio de sanación creado por Fabiola Zavalla
@@ -41,7 +39,7 @@
                 salud integral, el bienestar, el crecimiento personal
                 y la expansión de la consciencia.
             </p>
-            <ul>
+            <ul style="list-style-type: none;">
                 <li>Terapia Regresiva</li>
                 <li>Constelaciones Familiares</li>
                 <li>Biomagnetismo</li>
@@ -50,9 +48,16 @@
         </section>
 
         <section id="terapeuta">
-            <div class="terapeuta-info">
-                <img src="fabiola_perfil.jpg" alt="Terapeuta">
-                <p>
+            <div class="terapeuta-info" style="
+            display: flex;
+            padding: 20px;
+            flex-direction: row;
+            justify-content: space-around;"
+            >
+                <img src="fabiola_perfil.jpg" alt="Terapeuta" style="width: 30%;">
+                <p style="
+                align-content: center;
+                padding: 50px;">
                     ¿Quién soy? Mi nombre es Fabiola: 
                     Comencé́ a recorrer este camino desde 
                     el año 2009, paralelamente a mis 
